fix menu button on mobile blocking text

--- a/site/src/pages/mediaPage.css
+++ b/site/src/pages/mediaPage.css
@@ -25,6 +25,11 @@
 
 
 @media(max-width: 700px){
+  
+  #media-section{
+    margin-top: 4em;
+  }
+
   #images-wrapper{
     flex-direction: column;
     align-items: center;
